--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "opencollective-postinstall": "^2.0.2",
+    "prop-types": "^15.7.2",
     "react": "16.8.6",
-    "react-native": "0.60.4"
+    "react-native": "0.60.4",
+    "react-native-elements": "^1.1.0",
+    "react-native-vector-icons": "^6.6.0",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4"
   },
   "devDependencies": {
     "@babel/core": "7.5.5",
