--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "dependencies": {
     "opencollective-postinstall": "^2.0.2",
     "prop-types": "^15.7.2",
-    "react": "16.8.6",
-    "react-native": "0.60.4",
+    "react": "^16.9.0",
+    "react-native": "^0.60.5",
     "react-native-elements": "^1.1.0",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.1.0",
@@ -21,11 +21,11 @@
     "@babel/core": "7.5.5",
     "@babel/runtime": "7.5.5",
     "@react-native-community/eslint-config": "0.0.5",
-    "babel-jest": "24.8.0",
+    "babel-jest": "^24.9.0",
     "eslint": "6.1.0",
-    "jest": "24.8.0",
-    "metro-react-native-babel-preset": "^0.55.0",
-    "react-test-renderer": "16.8.6"
+    "jest": "^24.9.0",
+    "metro-react-native-babel-preset": "^0.56.0",
+    "react-test-renderer": "^16.9.0"
   },
   "jest": {
     "preset": "react-native"
