--- a/package.json
+++ b/package.json
@@ -8,22 +8,24 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "moment": "^2.24.0",
     "opencollective-postinstall": "^2.0.2",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-native": "^0.60.5",
     "react-native-elements": "^1.1.0",
+    "react-native-gesture-handler": "^1.4.1",
+    "react-native-reanimated": "^1.2.0",
     "react-native-vector-icons": "^6.6.0",
-    "react-redux": "^7.1.0",
-    "redux": "^4.0.4"
+    "react-navigation": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.5.5",
     "@babel/runtime": "7.5.5",
     "@react-native-community/eslint-config": "0.0.5",
     "babel-jest": "^24.9.0",
-    "eslint": "6.1.0",
+    "eslint": "^6.3.0",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.56.0",
     "react-test-renderer": "^16.9.0"
