--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-native": "^0.60.5",
-    "react-native-elements": "^1.1.0",
+    "react-native-elements": "^1.2.0",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-reanimated": "^1.2.0",
     "react-native-vector-icons": "^6.6.0",
-    "react-navigation": "^4.0.0"
+    "react-navigation": "^4.0.4"
   },
   "devDependencies": {
-    "@babel/core": "7.5.5",
-    "@babel/runtime": "7.5.5",
+    "@babel/core": "^7.6.0",
+    "@babel/runtime": "^7.6.0",
     "@react-native-community/eslint-config": "0.0.5",
     "babel-jest": "^24.9.0",
     "eslint": "^6.3.0",
