--- a/app.json
+++ b/app.json
@@ -3,14 +3,14 @@
     "name": "BirFatura",
     "slug": "BirFatura",
     "privacy": "public",
-    "sdkVersion": "34.0.0",
+    "sdkVersion": "35.0.0",
     "platforms": [
       "ios",
       "android",
       "web"
     ],
     "version": "1.0.0",
-    "orientation": "default",
+    "orientation": "portrait",
     "icon": "./src/assets/images/ic_launcher.png",
     "splash": {
       "image": "./assets/splash.png",
@@ -25,10 +25,6 @@
     ],
     "ios": {
       "supportsTablet": true
-    },
-    "android": {
-      "package": "com.birfatura"
-    },
-    "description": ""
+    }
   }
 }
