--- a/package.json
+++ b/package.json
@@ -8,25 +8,24 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "github:react-native-community/react-native-async-storage",
-    "axios": "^0.19.0",
-    "expo": "^34.0.1",
+    "expo": "^35.0.0",
     "moment": "^2.24.0",
-    "prop-types": "^15.7.2",
+    "prop-types": "latest",
     "react": "16.8.3",
-    "react-dom": "^16.8.6",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
-    "react-native-elements": "^1.2.0",
+    "react-dom": "16.8.3",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-native-elements": "^1.2.1",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-reanimated": "^1.2.0",
     "react-native-screens": "^2.0.0-alpha.3",
-    "react-native-vector-icons": "^6.6.0",
-    "react-native-web": "^0.11.4",
-    "react-navigation": "^4.0.5",
-    "react-navigation-stack": "^1.7.3"
+    "react-native-web": "^0.11.7"
   },
   "devDependencies": {
-    "babel-preset-expo": "^6.0.0"
+    "axios": "^0.19.0",
+    "babel-preset-expo": "^7.0.0",
+    "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^4.0.6",
+    "react-navigation-stack": "^1.8.0"
   },
   "private": true
 }
