--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
       "web"
     ],
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "default",
     "icon": "./src/assets/images/ic_launcher.png",
     "splash": {
       "image": "./assets/splash.png",
@@ -25,6 +25,10 @@
     ],
     "ios": {
       "supportsTablet": true
-    }
+    },
+    "android": {
+      "package": "com.birfatura"
+    },
+    "description": ""
   }
 }
