--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "react-dom": "^16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-elements": "^1.2.3",
-    "react-native-flash-message": "^0.1.14",
+    "react-native-flash-message": "^0.1.15",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-reanimated": "^1.3.0",
     "react-native-screens": "^2.0.0-alpha.3",
-    "react-native-web": "^0.11.7"
+    "react-native-web": "^0.11.7",
+    "validator": "^11.1.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.0.0",
