--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-native-elements": "^1.2.3",
     "react-native-flash-message": "^0.1.15",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-modal": "^11.4.0",
     "react-native-reanimated": "^1.3.0",
+    "react-native-render-html": "^4.1.2",
     "react-native-screens": "^2.0.0-alpha.3",
     "react-native-web": "^0.11.7",
     "validator": "^11.1.0"
