--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+node_modules/**/*
+.expo/*
+npm-debug.*
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
+*.orig.*
+web-build/
+web-report/
+
+# macOS
+.DS_Store
+
 # OSX
 #
 .DS_Store
