--- a/app.json
+++ b/app.json
@@ -6,8 +6,7 @@
     "sdkVersion": "35.0.0",
     "platforms": [
       "ios",
-      "android",
-      "web"
+      "android"
     ],
     "version": "1.0.0",
     "orientation": "default",
@@ -28,7 +27,6 @@
     },
     "android": {
       "package": "com.birfatura"
-    },
-    "description": ""
+    }
   }
 }
