--- a/app.json
+++ b/app.json
@@ -11,11 +11,6 @@
     "version": "1.0.0",
     "orientation": "default",
     "icon": "./src/assets/images/ic_launcher.png",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
     "updates": {
       "fallbackToCacheTimeout": 0
     },
@@ -27,6 +22,13 @@
     },
     "android": {
       "package": "com.birfatura"
+    }
+  },
+  "diactive": {
+    "splash": {
+      "image": "./assets/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
     }
   }
 }
