--- a/package.json
+++ b/package.json
@@ -11,25 +11,25 @@
     "axios": "^0.19.0",
     "expo": "^35.0.0",
     "moment": "^2.24.0",
-    "prop-types": "latest",
+    "prop-types": "^15.7.2",
     "react": "16.8.3",
     "react-dom": "16.8.3",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
-    "react-native-elements": "^1.2.5",
+    "react-native": "^0.59.10",
+    "react-native-elements": "^1.2.7",
     "react-native-flash-message": "^0.1.15",
-    "react-native-gesture-handler": "^1.4.1",
-    "react-native-modal": "^11.4.0",
-    "react-native-reanimated": "^1.3.0",
+    "react-native-gesture-handler": "^1.5.0",
+    "react-native-modal": "^11.5.1",
+    "react-native-reanimated": "^1.4.0",
     "react-native-render-html": "^4.1.2",
-    "react-native-screens": "^2.0.0-alpha.5",
+    "react-native-screens": "^2.0.0-alpha.7",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.7",
-    "validator": "^11.1.0"
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^1.10.3",
+    "validator": "^12.0.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^7.1.0",
-    "react-native-vector-icons": "^6.6.0",
-    "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^1.9.1"
+    "babel-preset-expo": "^7.1.0"
   },
   "private": true
 }
